--- a/css/news_test.css
+++ b/css/news_test.css
@@ -1,6 +1,7 @@
+
 #footer{
     text-align: center;
-    font-size: 1.2em;
+    font-size: 4em;
 }
 .bg-5{
     background-color: #33cc99;
@@ -30,7 +31,7 @@ a{
 }
 #menuBar a {
     color: white;
-    font-size: 1.3em;
+    font-size: 2em;
 }
 #menu ul li {
     list-style-type: none;
@@ -53,4 +54,24 @@ a{
 }
 #containtext h3{
     font-size: 0.8em;
+}
+.container-fluid{
+    max-width: 1000px;
+    padding: 0px;
+}
+body{
+    font-family: 'cwTeXYen', sans-serif;
+    background-color: rgba(98, 98, 98, 0.69);
+}
+.padnull{
+    padding:0;
+}
+.fusion-meta-info{
+    /*clear:both;*/
+    /*overflow:hidden;*/
+    /*margin-top:20px;*/
+    /*padding:5px 0;*/
+    border-top:1px solid #e7e6e6;
+    border-bottom:1px solid #e7e6e6;
+    /*font-size:12px*/
 }
