--- a/css/news_test.css
+++ b/css/news_test.css
@@ -57,7 +57,7 @@ a{
 }
 .container-fluid{
     max-width: 1000px;
-    padding: 0px;
+    /*padding: 0px;*/
 }
 body{
     font-family: 'cwTeXYen', sans-serif;
