--- a/css/newstest.css
+++ b/css/newstest.css
@@ -12,7 +12,7 @@ a{
     /*text-decoration-color: ;*/
 }
 #menuBar{
-    background-color: rgb(97, 151, 255)
+    /*background-color: rgb(97, 151, 255)*/
 }
 #menuBar ul{
     list-style:none;
@@ -24,14 +24,16 @@ a{
 
 
 }
-#menuBar ul li:hover{
-    background-color: rgb(90, 104, 201);
+#menuBar li:hover{
+    /*background-color: rgb(90, 104, 201);*/
+    /*background-color: rgb(255,255,255);*/
     border-bottom: solid;
     border-width:3px;
+    border-color:rgb(255,255,255);
 }
 #menuBar a {
     color: white;
-    font-size: 2em;
+    font-size: 1.3em;
 }
 #menu ul li {
     list-style-type: none;
@@ -39,12 +41,15 @@ a{
     border-bottom: solid darkgray;
     padding:10px 10px 10px 10px;
     margin:5px 5px 5px 5px;
+    font-size: 1.3em;
 }
 #menu ul li a{
     color: rgb(133, 96, 22);
 }
 #menu ul li a:hover{
     color: rgb(205, 121, 34);
+    /*font-size: 1.4em;*/
+    text-decoration: none;
 }
 #menu ul li::before{
     content:":: ";
