--- a/css/newstest.css
+++ b/css/newstest.css
@@ -1,7 +1,8 @@
 
 #footer{
     text-align: center;
-    font-size: 4em;
+    font-size: 1em;
+    height:70px;
 }
 .bg-5{
     background-color: #33cc99;
