--- a/css/newstest.css
+++ b/css/newstest.css
@@ -3,6 +3,7 @@
     text-align: center;
     font-size: 1.5em;
     height:70px;
+    background-color: rgb(0,0,0)
     /*background-color: rgba(98, 98, 98, 0.69);*/
 }
 .bg-5{
@@ -68,7 +69,8 @@ a{
 }
 body{
     font-family: 'cwTeXYen', sans-serif;
-    background-color: rgba(98, 98, 98, 0.69);
+    background-color: #525b56;
+    /*background-color: rgba(98, 98, 98, 0.69);*/
 }
 .padnull{
     padding:0;
@@ -89,4 +91,9 @@ body{
     border-bottom: solid;
     border-width:2px;
     border-color:rgb(147,147,147);
+}
+.menuBarAction {
+    border-bottom: solid;
+    border-width:3px;
+    border-color:rgb(255,255,255);
 }
