--- a/css/newstest.css
+++ b/css/newstest.css
@@ -97,3 +97,9 @@ body{
     border-width:3px;
     border-color:rgb(255,255,255);
 }
+.testImage{
+    background: url("../Image/logo.jpg");
+}
+.testImage:hover{
+    background: url("../Image/homeIcon.png");
+}
