--- a/css/newstest.css
+++ b/css/newstest.css
@@ -3,7 +3,8 @@
     text-align: center;
     font-size: 1.5em;
     height:70px;
-    background-color: rgb(0,0,0)
+    background-color: rgb(0,0,0);
+    /*margin:0 ;*/
     /*background-color: rgba(98, 98, 98, 0.69);*/
 }
 .bg-5{
@@ -102,4 +103,11 @@ body{
 }
 .testImage:hover{
     background: url("../Image/homeIcon.png");
+}
+.panel_background{
+    -webkit-filter: blur(15px);
+    -moz-filter: blur(15px);
+    -o-filter: blur(15px);
+    -ms-filter: blur(15px);
+    filter: blur(15px);
 }
