--- a/css/newstest.css
+++ b/css/newstest.css
@@ -1,9 +1,11 @@
-
+@import url('https://fonts.googleapis.com/earlyaccess/cwtexyen.css');
+@import url('https://fonts.googleapis.com/css?family=Saira+Condensed');
 #footer{
     text-align: center;
     font-size: 1.5em;
     height:70px;
-    background-color: rgb(0,0,0);
+    background-color: rgb(0, 0, 0);
+    color:rgb(255,255,255);
     /*margin:0 ;*/
     /*background-color: rgba(98, 98, 98, 0.69);*/
 }
@@ -73,6 +75,11 @@ body{
     background-color: #525b56;
     /*background-color: rgba(98, 98, 98, 0.69);*/
 }
+@font-face {
+    font-family: 'Saira Condensed';
+    unicode-range: U+00-7F; /* ASCII */
+    src: local(Helvetica), local(Arial); /* 先找 Helvetica ，沒有的話用 Arial */
+}
 .padnull{
     padding:0;
 }
@@ -103,11 +110,4 @@ body{
 }
 .testImage:hover{
     background: url("../Image/homeIcon.png");
-}
-.panel_background{
-    -webkit-filter: blur(15px);
-    -moz-filter: blur(15px);
-    -o-filter: blur(15px);
-    -ms-filter: blur(15px);
-    filter: blur(15px);
 }
